# machine-learning-with-python

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
poetry-scripts/: __init__.py  dev_tools.py  export_requirements.py
src/: .gitignore  01-titanic-survivors-analysis.py  03-weather-prediction.ipynb  04-clothing-images.py  05-data-augmentation.ipynb  05-data-augmentation.py  05-objects-detection.ipynb  06-fine-tuning.ipynb  06-fine-tuning.py  clothing-images.ipynb  clothing-images.py  iris1-orig.py  iris1.ipynb  iris1.py  irises-detection-orig.py  irises-detection.py  markov1.py  titanic-survivors-analysis.ipynb  titanic1.ipynb  titanic1.py  weather-prediction.ipynb  weather-prediction.py
